<resources>
    <string name="app_name">Quiz App</string>
    <string name="score_message_first_part">Congratulations !!! Your score is&#160;</string>
    <string name="score_message_second_part">&#160; out of &#160; 10</string>
    <string name="finish">Finish</string>
    <string name="question_1">1. What company developed Android?</string>
    <string name="google">Google</string>
    <string name="amazon">Amazon</string>
    <string name="facebook">Facebook</string>
    <string name="microsoft">Microsoft</string>
    <string name="question_2">2. What is the symbol of Android?</string>
    <string name="question_3">3. Can you create an activity using Android without a user interface?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question_4">4. Specify a language that can be used for the development of Android apps.</string>
    <string name="java">JAVA</string>
    <string name="kotlin">KOTLIN</string>
    <string name="c">C/C++</string>
    <string name="c_sharp">C#</string>
    <string name="basic">BASIC</string>
    <string name="corona">CORONA/LUA</string>
    <string name="phonegap">PHONEGAP</string>
    <string name="question_5">5. Select the tools that are placed in an Android SDK.</string>
    <string name="ddms">DDMS (Dalvik Debug Monitoring Services)</string>
    <string name="aapt">AAPT (Android Asset Packaging Tool)</string>
    <string name="adb">ADB (Android Debug Bridge)</string>
    <string name="question_6">6. Where are the layouts placed in Android?</string>
    <string name="layout_folder">the layout folder</string>
    <string name="question_7">7. When was Android released?</string>
    <string name="year_2008">2008</string>
    <string name="year_2014">2014</string>
    <string name="year_2018">2018</string>
    <string name="question_8">8. Which is the best approach in Android between Serializable and Parcelable?</string>
    <string name="serializable">Serializable</string>
    <string name="parcelable">Parcelable</string>
    <string name="question_9">9. Who is the founder of Android?</string>
    <string name="andy_rubin">Andy Rubin</string>
    <string name="brendan_eich">Brendan Eich</string>
    <string name="james_gosling">James Gosling</string>
    <string name="question_10">10. What are the four essential states of an activity?</string>
    <string name="active">Active</string>
    <string name="paused">Paused</string>
    <string name="stopped">Stopped</string>
    <string name="destroyed">Destroyed</string>
    <string name="finished">Finished</string>
</resources>
