<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_ic_timelapse_black_48dp"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/layout_margin"
            android:src="@drawable/ic_timelapse_black_48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/padding"
            android:text="@string/question_1"
            android:textSize="@dimen/text_size" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:fontFamily="sans-serif-medium"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/id_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/google"
                android:textSize="@dimen/text_size" />

            <RadioButton
                android:id="@+id/id_amazon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/amazon"
                android:textSize="@dimen/text_size" />

            <RadioButton
                android:id="@+id/id_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/facebook"
                android:textSize="@dimen/text_size" />

            <RadioButton
                android:id="@+id/id_microsoft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/microsoft"
                android:textSize="@dimen/text_size" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/padding"
            android:text="@string/question_2"
            android:textSize="@dimen/text_size" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:fontFamily="sans-serif-medium"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/id_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:drawableRight="@drawable/ic_home_black_48dp" />

            <RadioButton
                android:id="@+id/id_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_android_black_48dp" />

            <RadioButton
                android:id="@+id/id_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_wb_sunny_black_48dp" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/padding"
            android:text="@string/question_3"
            android:textSize="@dimen/text_size" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:fontFamily="sans-serif-medium"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/id_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/yes"
                android:textSize="@dimen/text_size" />

            <RadioButton
                android:id="@+id/id_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/no"
                android:textSize="@dimen/text_size" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/padding"
            android:text="@string/question_4"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/id_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:inputType="textCapCharacters"
            android:padding="@dimen/padding" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/layout_margin"
            android:onClick="computeScore"
            android:text="@string/finish" />

    </LinearLayout>

</ScrollView>